[package]
name = "suspend-web"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "4", features = ["tokio"] }
futures-util = "0.3"
gilrs = "0.11"
axum = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
